--- a/styles/index.sass
+++ b/styles/index.sass
@@ -1,3 +1,23 @@
+@mixin tooltip($name, $bg)
+  .tippy-tooltip.#{$name}-theme
+    background-color: $bg
+    @content
+    & [x-circle]
+      background-color: $bg
+    .tippy-popper[x-placement^=top] & [x-arrow]
+      border-top-color: $bg !important
+    .tippy-popper[x-placement^=bottom] & [x-arrow]
+      border-bottom-color: $bg !important
+    .tippy-popper[x-placement^=left] & [x-arrow]
+      border-left-color: $bg !important
+    .tippy-popper[x-placement^=right] & [x-arrow]
+      border-right-color: $bg !important
+
+.tippy-popper
+  font-family: "Red Hat Text", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+
+@include tooltip(dark, #27272a)
+
 html, body
   background-color: #171717
 
@@ -5,7 +25,7 @@ html, body
   --tw-drop-shadow: drop-shadow(0 3px 1px rgba(0, 0, 0, 0.5)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1))
 
 html
-  &::-webkit-scrollbar 
+  &::-webkit-scrollbar
     width: 10px
     height: 10px
   &::-webkit-scrollbar-thumb
