chore(deps): update deps

--- a/src/components/JsonLd.astro
+++ b/src/components/JsonLd.astro
@@ -1,5 +1,5 @@
 ---
-import { WithContext, Person, Thing } from 'schema-dts';
+import type { WithContext, Person, Thing } from 'schema-dts';
 
 export interface Props<T extends Thing> {
   data: WithContext<T>;
