--- a/src/components/home/LandingCard.astro
+++ b/src/components/home/LandingCard.astro
@@ -1,10 +1,10 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon/components';
 import Card from './common/Card.astro';
 import Lanyard from './lanyard/Lanyard';
 import SnazzahAvatar from './SnazzahAvatar';
 import SnazzahLogo from './SnazzahLogo';
-import { commonIconLinkClass, commonLinkClass, SimpleLinkContent } from './common/constants';
+import { commonIconLinkClass, commonLinkClass, type SimpleLinkContent } from './common/constants';
 
 const USER_ID = '158049329150427136';
 
