--- a/src/components/home/SkillsCard.astro
+++ b/src/components/home/SkillsCard.astro
@@ -1,7 +1,7 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon/components';
 import Card from './common/Card.astro';
-import { commonIconLinkClass, IconSectionContent } from './common/constants';
+import { commonIconLinkClass, type IconSectionContent } from './common/constants';
 
 export const skills: IconSectionContent = [
   [
