--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import JsonLd from '../components/JsonLd.astro';
-import { WithContext, Person } from 'schema-dts';
+import type { WithContext, Person } from 'schema-dts';
 import SW from '../components/SW.astro';
 
 export interface Props {
