--- a/src/components/home/ProjectsCard.astro
+++ b/src/components/home/ProjectsCard.astro
@@ -1,7 +1,7 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon/components';
 import Card from './common/Card.astro';
-import { commonIconLinkClass, SectionContent } from './common/constants';
+import { commonIconLinkClass, type SectionContent } from './common/constants';
 
 export const projects: SectionContent = [
   {
