feat: add plausible

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,6 +74,8 @@ const JSONLDData: WithContext<Person> = {
     <meta name="theme-color" content="#fc2929" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
+    <script defer data-domain="snazzah.com" src="https://p.snaz.in/js/script.js"></script>
+
     <JsonLd data={JSONLDData} />
     <SW />
   </head>
