add microformats2 h-card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,15 @@ import '../styles/default.sass';
       <ProjectsCard />
 
       <Footer />
+
+      <!-- https://microformats.org/wiki/h-card -->
+      <section class="hidden h-card">
+        <a class="p-name u-url u-uid" href="https://snazzah.com/">Snazzah</a>
+        <span class="p-nickname">snazzah</span>
+        <img class="u-logo" src="https://snazzah.com/images/avatar.min.png"/>
+        <a class="u-email" href="mailto:me@snazzah.com">me@snazzah.com</a>
+        <div class="p-note">internet wildcat</div>
+      </section>
     </main>
   </div>
 </Layout>
