add more rel=me stuff

--- a/src/components/home/LandingCard.astro
+++ b/src/components/home/LandingCard.astro
@@ -12,12 +12,14 @@ const links: SimpleLinkContent = [
   {
     name: 'Twitter',
     url: 'https://twitter.com/Snazzah',
-    icon: 'twitter'
+    icon: 'twitter',
+    rel: 'me'
   },
   {
     name: 'GitHub',
     url: 'https://github.com/Snazzah',
-    icon: 'github'
+    icon: 'github',
+    rel: 'me'
   },
   {
     name: 'Steam',
@@ -43,7 +45,8 @@ const links: SimpleLinkContent = [
   {
     name: 'E-mail',
     url: 'mailto:me@snazzah.com',
-    icon: 'email'
+    icon: 'email',
+    rel: 'me'
   }
 ];
 
