add bluesky link

--- a/src/components/home/LandingCard.astro
+++ b/src/components/home/LandingCard.astro
@@ -16,6 +16,12 @@ const links: SimpleLinkContent = [
     rel: 'me'
   },
   {
+    name: 'Bluesky',
+    url: 'https://bsky.app/profile/snazzah.com',
+    icon: 'bluesky',
+    rel: 'me'
+  },
+  {
     name: 'GitHub',
     url: 'https://github.com/Snazzah',
     icon: 'github',
